--- a/app/css/main.css
+++ b/app/css/main.css
@@ -52,7 +52,34 @@ body {
   -webkit-align-items: baseline;
       -ms-flex-align: baseline;
           align-items: baseline;
-  background: #2f364a; }
+  -webkit-flex-basis: 100%;
+      -ms-flex-preferred-size: 100%;
+          flex-basis: 100%;
+  background: #2f364a;
+  font-size: 13px; }
+  .header__menu {
+    padding: 0;
+    margin: 0;
+    list-style: none; }
+    .header__menu_item {
+      display: inline-block; }
+  .header__link {
+    display: block;
+    padding: 18px 20px;
+    text-decoration: none;
+    color: #69738c;
+    margin-left: -4px; }
+    .header__link:hover, .header__link:focus {
+      background: #15a4fa;
+      color: white; }
+    .header__link-user {
+      width: 157px;
+      text-align: center;
+      position: relative; }
+      .header__link-user_style {
+        position: absolute;
+        left: 22px;
+        top: 11px; }
 
 .sidebar {
   -webkit-box-flex: 1;
@@ -60,7 +87,7 @@ body {
       -ms-flex: 1;
           flex: 1;
   background: #1f2637;
-  color: #78829d;
+  color: #4f5a6f;
   font-family: 'Proxima Nova Regular', serif;
   font-size: 13px; }
   .sidebar__item {
@@ -83,8 +110,9 @@ body {
       height: 114px; }
     .sidebar__item:last-child {
       border-bottom: none;
-      -webkit-box-shadow: inset 0px 1px 0px 0px #282f41;
-              box-shadow: inset 0px 1px 0px 0px #282f41; }
+      -webkit-box-shadow: inset 0 1px 0 0 #282f41;
+              box-shadow: inset 0 1px 0 0 #282f41;
+      margin-bottom: 20px; }
   .sidebar__btn {
     width: 160px;
     height: 44px;
@@ -104,7 +132,7 @@ body {
   padding: 0; }
   .main-menu__link {
     display: block;
-    padding: 10px 20px 10px 46px;
+    padding: 13px 20px 13px 46px;
     text-decoration: none;
     color: #78829d; }
     .main-menu__link:hover, .main-menu__link:focus {
@@ -116,7 +144,7 @@ body {
   padding: 0; }
   .category__link {
     display: block;
-    padding: 10px 20px 10px 46px;
+    padding: 13px 20px 13px 46px;
     text-decoration: none;
     color: #78829d; }
     .category__link:hover, .category__link:focus {
@@ -128,9 +156,12 @@ body {
   font-size: 12px; }
   .history__text {
     display: inline-block;
-    margin-bottom: 18px; }
+    margin-bottom: 10px; }
+    .history__text_light {
+      color: #677b92; }
   .history__time {
-    font-family: 'Proxima Nova Light', sans-serif; }
+    font-family: 'Proxima Nova Light', sans-serif;
+    color: #545d74; }
 
 .content {
   display: -webkit-box;
@@ -147,6 +178,71 @@ body {
       -ms-flex: 6;
           flex: 6;
   background: #eef1f7; }
+  .content__title {
+    font-size: 22px;
+    color: #444c63;
+    padding: 27px 0 27px 20px;
+    border-bottom: 1px solid #dadfea; }
+  .content__item {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+    -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-shadow: inset 0 1px 0 0 #f4f6fa;
+            box-shadow: inset 0 1px 0 0 #f4f6fa;
+    padding: 10px 20px;
+    border-bottom: 1px solid #dadfea; }
+
+.filter {
+  padding: 0;
+  margin: 0;
+  list-style: none; }
+  .filter__item {
+    display: inline-block; }
+  .filter__link {
+    display: block;
+    text-decoration: none;
+    color: #8c97b2;
+    font-size: 12px;
+    margin-right: 10px;
+    padding: 6px 10px;
+    text-align: center;
+    -webkit-border-radius: 18px;
+            border-radius: 18px; }
+    .filter__link:hover, .filter__link:focus {
+      color: white;
+      background: #97b3ce; }
+
+.search-form_style {
+  border: 1px solid #c7cddb;
+  -webkit-border-radius: 20px;
+          border-radius: 20px;
+  padding: 10px 50px 10px 18px;
+  width: 398px; }
+  .search-form_style:focus {
+    outline: 0;
+    border: 1px solid #15a4fa;
+    -webkit-box-shadow: 0 0 5px 0 #15a4fa;
+            box-shadow: 0 0 5px 0 #15a4fa; }
+
+.library {
+  -webkit-flex-basis: 100%;
+      -ms-flex-preferred-size: 100%;
+          flex-basis: 100%;
+  background: white; }
 
 .footer {
   display: -webkit-box;
@@ -158,3 +254,10 @@ body {
       -ms-flex-pack: end;
           justify-content: flex-end;
   background: #181e2c; }
+  .footer__btn {
+    display: block;
+    height: 38px;
+    width: 51px;
+    background: #1f2637; }
+    .footer__btn:hover, .footer__btn:focus {
+      background: #15a4fa; }
