--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -1,3 +1,4 @@
+@import 'mixin';
 @font-face {
   font-family: 'Proxima Nova Regular';
   src: url(../fonts/ProximaNova/Proxima-Nova-Regular.otf)
@@ -30,13 +31,49 @@ body{
   display: flex;
   justify-content: flex-end;
   align-items: baseline;
+  flex-basis: 100%;
   background: #2f364a;
+  font-size: 13px;
+  &__menu{
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    &_item{
+      display: inline-block;
+    }
+  }
+
+  &__link{
+    display: block;
+    padding: 18px 20px;
+    text-decoration: none;
+    color: #69738c;
+    margin-left: -4px;
+
+    &:hover, &:focus{
+      background: #15a4fa;
+      color: white;
+    }
+
+    &-user{
+      width: 157px;
+      text-align: center;
+      position: relative;
+      &_style{
+        position: absolute;
+        left: 22px;
+        top: 11px;
+      }
+    }
+  }
+
+
 }
 
 .sidebar{
   flex:1;
   background: #1f2637;
-  color: #78829d;
+  color: #4f5a6f;
   font-family: 'Proxima Nova Regular', serif;
   font-size: 13px;
 
@@ -54,7 +91,8 @@ body{
 
     &:last-child{
       border-bottom: none;
-      box-shadow: inset 0px 1px 0px 0px rgb(40,47,65);
+      box-shadow: inset 0 1px 0 0 rgb(40,47,65);
+      margin-bottom: 20px;
     }
 
   }
@@ -70,6 +108,7 @@ body{
     font-size: 14px;
     text-transform: uppercase;
     font-weight: bold;
+    outline: 0;
   }
 }
 
@@ -79,7 +118,7 @@ body{
   padding: 0;//скрывает маркер
   &__link {
     display: block;
-    padding: 10px 20px 10px 46px;
+    padding: 13px 20px 13px 46px;
     text-decoration: none;
     color: #78829d;
 
@@ -99,7 +138,7 @@ body{
 
   &__link {
     display: block;
-    padding: 10px 20px 10px 46px;
+    padding: 13px 20px 13px 46px;
     text-decoration: none;
     color: #78829d;
 
@@ -116,11 +155,17 @@ body{
 
   &__text{
     display: inline-block;
-    margin-bottom: 18px;
+    margin-bottom: 10px;
+    &_light{
+      color: #677b92;
+    }
   }
   &__time{
     font-family: 'Proxima Nova Light', sans-serif;
+    color: #545d74;
+    &:last-child{
 
+    }
   }
 }
 
@@ -130,10 +175,82 @@ body{
   flex-direction: column;
   flex: 6;
   background: #eef1f7;
+  &__title{
+    font-size: 22px;
+    color: #444c63;
+    padding: 27px 0 27px 20px;
+    border-bottom: 1px solid #dadfea;
+  }
+
+  &__item{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: inset 0 1px 0 0 rgb(244,246,250);
+    padding: 10px 20px;
+    border-bottom: 1px solid #dadfea;
+  }
+}
+
+.filter{
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  &__item{
+    display: inline-block;
+  }
+
+  &__link{
+    display: block;
+    text-decoration: none;
+    color: #8c97b2;
+    font-size: 12px;
+    margin-right: 10px;
+    padding: 6px 10px;
+    text-align: center;
+    border-radius: 18px;
+
+    &:hover, &:focus{
+      color: white;
+      background: #97b3ce;
+    }
+  }
+}
+
+.search-form{
+  &_style{
+    border: 1px solid #c7cddb;
+    border-radius: 20px;
+    padding: 10px 50px 10px 18px;
+    width: 398px;
+    @include placeholder {
+      color: #8c97b2;
+    }
+    &:focus{
+      outline: 0;
+      border: 1px solid #15a4fa;
+      box-shadow: 0 0 5px 0 #15a4fa;
+    }
+  }
+}
+
+.library{
+  flex-basis: 100%;
+  background: white;
 }
 
 .footer{
   display: flex;
   justify-content: flex-end;
   background: #181e2c;
+  &__btn{
+    display: block;
+    height: 38px;
+    width: 51px;
+    background: #1f2637;
+    &:hover, &:focus{
+      background: #15a4fa;
+    }
+  }
 }
