--- a/app/sass/_mixin.scss
+++ b/app/sass/_mixin.scss
@@ -1,3 +1,9 @@
+@mixin optional-at-root($sel) {
+  @at-root #{if(not &, $sel, selector-append(&, $sel))} {
+    @content;
+  }
+}
+
 @mixin placeholder {
   @include optional-at-root('::-webkit-input-placeholder') {
     @content;
