--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2391,20 +2391,20 @@ body {
   -webkit-flex-basis: 100%;
       -ms-flex-preferred-size: 100%;
           flex-basis: 100%;
-  background: #2f364a;
-  font-size: 13px; }
+  background: #2f364a; }
   .header__menu {
     padding: 0;
     margin: 0;
-    list-style: none; }
+    list-style: none;
+    font-size: 13px; }
     .header__menu_item {
       display: inline-block; }
   .header__link {
     display: block;
     padding: 18px 20px;
     text-decoration: none;
-    color: #69738c;
-    margin-left: -4px; }
+    margin-left: -4px;
+    color: #69738c; }
     .header__link:hover, .header__link:focus {
       background: #15a4fa;
       color: white; }
@@ -2422,6 +2422,32 @@ body {
         position: absolute;
         right: 42px;
         content: '\f13a'; }
+  .header__btn-user {
+    border: 0;
+    height: 52px;
+    width: 157px;
+    background-color: #2f364a;
+    margin-left: -3px;
+    position: relative;
+    color: #69738c; }
+    .header__btn-user-avatar {
+      position: absolute;
+      left: 19px;
+      top: 11px; }
+    .header__btn-user-text {
+      font-size: 13px;
+      margin-left: 22px; }
+    .header__btn-user::after {
+      font-family: FontAwesome, sans-serif;
+      font-size: 14px;
+      position: absolute;
+      right: 15px;
+      content: '\f13a'; }
+    .header__btn-user:hover, .header__btn-user:focus {
+      background: #15a4fa;
+      color: white;
+      outline: 0;
+      cursor: pointer; }
 
 .sidebar {
   -webkit-box-flex: 1;
@@ -2478,58 +2504,73 @@ body {
         position: relative;
         left: -3px;
         top: 2px; }
-  .sidebar .main-menu__link {
-    display: block;
-    padding: 13px 20px 13px 21px;
-    text-decoration: none;
-    color: #78829d; }
-    .sidebar .main-menu__link::before {
+    .sidebar__btn:hover {
+      cursor: pointer; }
+  .sidebar .main-menu {
+    padding: 0;
+    margin: 0;
+    list-style: none; }
+    .sidebar .main-menu__item::before {
       font-family: FontAwesome, sans-serif;
       font-size: 14px;
       float: left;
       position: relative;
-      margin-right: 13px; }
-    .sidebar .main-menu__link:hover, .sidebar .main-menu__link:focus {
-      background: #15a4fa;
-      color: white;
-      cursor: pointer; }
-  .sidebar .main-menu__link:nth-child(1)::before {
+      top: 14px;
+      padding-left: 22px;
+      pointer-events: none; }
+    .sidebar .main-menu__item:hover::before {
+      color: white; }
+    .sidebar .main-menu__link {
+      display: block;
+      padding: 13px 20px 13px 46px;
+      text-decoration: none;
+      color: #78829d; }
+      .sidebar .main-menu__link:hover {
+        background: #15a4fa;
+        color: white;
+        cursor: pointer; }
+  .sidebar .main-menu__item:nth-child(1)::before {
     content: ""; }
-  .sidebar .main-menu__link:nth-child(2)::before {
+  .sidebar .main-menu__item:nth-child(2)::before {
     content: ""; }
-  .sidebar .main-menu__link:nth-child(3)::before {
+  .sidebar .main-menu__item:nth-child(3)::before {
     content: ""; }
-  .sidebar .main-menu__link:nth-child(4)::before {
+  .sidebar .main-menu__item:nth-child(4)::before {
     content: ""; }
-  .sidebar .main-menu__link:nth-child(5)::before {
+  .sidebar .main-menu__item:nth-child(5)::before {
     content: ""; }
-  .sidebar .main-menu__link:nth-child(6)::before {
+  .sidebar .main-menu__item:nth-child(6)::before {
     content: ""; }
-  .sidebar .category__link {
-    display: block;
-    padding: 13px 20px 13px 25px;
-    text-decoration: none;
-    color: #78829d; }
-    .sidebar .category__link::before {
+  .sidebar .category {
+    padding: 0;
+    margin: 0;
+    list-style: none; }
+    .sidebar .category__item::before {
       content: "";
-      margin-right: 13px;
       width: 7px;
       height: 7px;
       float: left;
       -webkit-border-radius: 50%;
               border-radius: 50%;
       position: relative;
-      top: 5px; }
-    .sidebar .category__link:hover, .sidebar .category__link:focus {
-      background: #15a4fa;
-      color: white; }
-  .sidebar .category__link:nth-child(1)::before {
+      top: 18px;
+      margin-left: 25px;
+      pointer-events: none; }
+    .sidebar .category__link {
+      display: block;
+      padding: 13px 20px 13px 46px;
+      text-decoration: none;
+      color: #78829d; }
+      .sidebar .category__link:hover {
+        background: #15a4fa;
+        color: white; }
+  .sidebar .category__item:nth-child(1)::before {
     background-color: #e64c66; }
-  .sidebar .category__link:nth-child(2)::before {
+  .sidebar .category__item:nth-child(2)::before {
     background-color: #ffab00; }
-  .sidebar .category__link:nth-child(3)::before {
+  .sidebar .category__item:nth-child(3)::before {
     background-color: #00bfdd; }
-  .sidebar .category__link:nth-child(4)::before {
+  .sidebar .category__item:nth-child(4)::before {
     background-color: #7874cf; }
   .sidebar .history {
     padding: 20px 18px 0 46px;
@@ -2537,7 +2578,8 @@ body {
     .sidebar .history__text {
       display: inline-block;
       margin-bottom: 10px; }
-      .sidebar .history__text_light {
+      .sidebar .history__text_link {
+        text-decoration: none;
         color: #677b92; }
     .sidebar .history__time {
       font-family: 'Proxima Nova Light', sans-serif;
@@ -2608,15 +2650,27 @@ body {
       text-align: center;
       -webkit-border-radius: 18px;
               border-radius: 18px; }
+      .content .filter__link:hover, .content .filter__link_active {
+        color: white;
+        background: #97b3ce; }
       .content .filter__link:hover, .content .filter__link:focus {
         color: white;
         background: #97b3ce; }
+  .content .search-form__icon::before {
+    content: '\f002';
+    font-family: FontAwesome, sans-serif;
+    font-size: 20px;
+    position: relative;
+    left: 449px;
+    top: 2px;
+    color: #8c97b2; }
   .content .search-form_style {
     border: 1px solid #c7cddb;
     -webkit-border-radius: 20px;
             border-radius: 20px;
     padding: 10px 50px 10px 18px;
-    width: 398px; }
+    width: 398px;
+    color: #8c97b2; }
     .content .search-form_style::-webkit-input-placeholder {
       color: #8c97b2; }
     .content .search-form_style:-moz-placeholder {
@@ -2627,7 +2681,7 @@ body {
       color: #8c97b2; }
     .content .search-form_style:focus {
       outline: 0;
-      border: 1px solid #15a4fa;
+      border: 1px solid white;
       -webkit-box-shadow: 0 0 5px 0 #15a4fa;
               box-shadow: 0 0 5px 0 #15a4fa; }
   .content .library {
@@ -2667,26 +2721,11 @@ body {
       margin-top: 30px;
       height: 350px;
       width: 200px; }
-      .content .library__book-jacket_first {
-        background: url(../img/book-01.png) no-repeat; }
-      .content .library__book-jacket_second {
-        background: url(../img/book-02.png) no-repeat; }
-      .content .library__book-jacket_third {
-        background: url(../img/book-03.png) no-repeat; }
-      .content .library__book-jacket_fourth {
-        background: url(../img/book-04.png) no-repeat; }
-      .content .library__book-jacket_fifth {
-        background: url(../img/book-05.png) no-repeat; }
-      .content .library__book-jacket_sixth {
-        background: url(../img/book-06.png) no-repeat; }
-      .content .library__book-jacket_seventh {
-        background: url(../img/book-07.png) no-repeat; }
-      .content .library__book-jacket_eighth {
-        background: url(../img/book-08.png) no-repeat; }
-      .content .library__book-jacket_ninth {
-        background: url(../img/book-09.png) no-repeat; }
-      .content .library__book-jacket_tenth {
-        background: url(../img/book-10.png) no-repeat; }
+      .content .library__book-jacket {
+        -webkit-border-radius: 5px;
+                border-radius: 5px;
+        width: 200px;
+        height: 275px; }
       .content .library__book-name {
         font-size: 16px;
         color: #444c63; }
@@ -2727,6 +2766,7 @@ body {
           justify-content: flex-end;
   background: #181e2c; }
   .footer__btn {
+    border: 0;
     height: 38px;
     width: 51px;
     background: #1f2637;
@@ -2748,4 +2788,5 @@ body {
     .footer__btn:hover, .footer__btn:focus {
       background: #15a4fa;
       color: white;
-      cursor: pointer; }
+      cursor: pointer;
+      outline: none; }
