--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -42,11 +42,12 @@ body{
   align-items: baseline;
   flex-basis: 100%;
   background: #2f364a;
-  font-size: 13px;
+
   &__menu{
     padding: 0;
     margin: 0;
     list-style: none;
+    font-size: 13px;
     &_item{
       display: inline-block;
     }
@@ -56,9 +57,8 @@ body{
     display: block;
     padding: 18px 20px;
     text-decoration: none;
-    color: #69738c;
     margin-left: -4px;
-
+    color: #69738c;
     &:hover, &:focus{
       background: #15a4fa;
       color: white;
@@ -84,7 +84,42 @@ body{
     }
   }
 
+  &__btn-user{
+    border: 0;
+    height: 52px;
+    width: 157px;
+    background-color: #2f364a;
+    margin-left: -3px;
+    position: relative;
+    //top: 2px;
+    color: #69738c;
 
+    &-avatar{
+      position: absolute;
+      left: 19px;
+      top: 11px;
+    }
+
+    &-text{
+      font-size: 13px;
+      margin-left: 22px;
+    }
+
+    &::after{
+      font-family: FontAwesome, sans-serif;
+      font-size: 14px;
+      position: absolute;
+      right: 15px;
+      content: '\f13a';
+    }
+
+    &:hover, &:focus{
+       background: #15a4fa;
+       color: white;
+       outline: 0;
+      cursor: pointer;
+     }
+  }
 }
 
 .sidebar{
@@ -140,24 +175,42 @@ body{
         top: 2px;
       }
     }
+
+    &:hover{
+      cursor: pointer;
+    }
   }
 
   .main-menu{
-    &__link{
-      display: block;
-      padding: 13px 20px 13px 21px;
-      text-decoration: none;
-      color: #78829d;
+    padding: 0;
+    margin: 0;
+    list-style: none;
 
+    &__item{
       &::before {
         font-family: FontAwesome, sans-serif;
         font-size: 14px;
         float: left;
         position: relative;
-        margin-right: 13px;
+        top: 14px;
+        padding-left: 22px;
+        pointer-events: none
       }
 
-      &:hover, &:focus {
+      &:hover{
+        &::before {
+          color: white;
+        }
+      }
+    }
+
+    &__link{
+      display: block;
+      padding: 13px 20px 13px 46px;
+      text-decoration: none;
+      color: #78829d;
+
+      &:hover{
         background: #15a4fa;
         color: white;
         cursor: pointer;
@@ -166,7 +219,7 @@ body{
   }
 
   @for $i from 1 through 6 {
-    .main-menu__link:nth-child(#{$i}) {
+    .main-menu__item:nth-child(#{$i}) {
         &::before {
           content: nth($main-nav_icons, $i);
         }
@@ -175,31 +228,38 @@ body{
 
 
   .category{
-    &__link {
-      display: block;
-      padding: 13px 20px 13px 25px;
-      text-decoration: none;
-      color: #78829d;
+    padding: 0;
+    margin: 0;
+    list-style: none;
 
+    &__item{
       &::before {
         content: "";
-        margin-right: 13px;
         width: 7px;
         height: 7px;
         float: left;
         border-radius: 50%;
         position: relative;
-        top: 5px;
+        top: 18px;
+        margin-left: 25px;
+        pointer-events: none
       }
+    }
 
-       &:hover, &:focus {
+    &__link {
+      display: block;
+      padding: 13px 20px 13px 46px;
+      text-decoration: none;
+      color: #78829d;
+
+       &:hover{
          background: #15a4fa;
          color: white;
        }
     }
   }
   @for $i from 1 through 4{
-    .category__link:nth-child(#{$i}) {
+    .category__item:nth-child(#{$i}) {
       &::before{
         background-color: nth($category-color, $i);
       }
@@ -213,7 +273,8 @@ body{
     &__text{
       display: inline-block;
       margin-bottom: 10px;
-      &_light{
+      &_link{
+        text-decoration: none;
         color: #677b92;
       }
     }
@@ -256,6 +317,10 @@ body{
     box-shadow: inset 0 1px 0 0 rgb(244,246,250);
     padding: 10px 20px;
     border-bottom: 1px solid #dadfea;
+
+    &_active{
+
+    }
   }
 
   .filter{
@@ -276,6 +341,11 @@ body{
       text-align: center;
       border-radius: 18px;
 
+      &:hover, &_active{
+        color: white;
+        background: #97b3ce;
+      }
+
       &:hover, &:focus{
         color: white;
         background: #97b3ce;
@@ -284,17 +354,32 @@ body{
   }
 
   .search-form{
+    &__icon{
+      &::before{
+        content: '\f002';
+        font-family: FontAwesome, sans-serif;
+        font-size: 20px;
+        position: relative;
+        left: 449px;
+        top: 2px;
+        color: #8c97b2;
+      }
+    }
+
+
     &_style{
       border: 1px solid #c7cddb;
       border-radius: 20px;
       padding: 10px 50px 10px 18px;
       width: 398px;
+      color: #8c97b2;
       @include placeholder {
         color: #8c97b2;
       }
+
       &:focus{
         outline: 0;
-        border: 1px solid #15a4fa;
+        border: 1px solid rgb(255, 255, 255);
         box-shadow: 0 0 5px 0 #15a4fa;
       }
     }
@@ -318,16 +403,9 @@ body{
       width: 200px;
 
       &-jacket{
-        &_first{background: url(../img/book-01.png) no-repeat;}
-        &_second{background: url(../img/book-02.png) no-repeat;}
-        &_third{background: url(../img/book-03.png) no-repeat;}
-        &_fourth{background: url(../img/book-04.png) no-repeat;}
-        &_fifth{background: url(../img/book-05.png) no-repeat;}
-        &_sixth{background: url(../img/book-06.png) no-repeat;}
-        &_seventh{background: url(../img/book-07.png) no-repeat;}
-        &_eighth{background: url(../img/book-08.png) no-repeat;}
-        &_ninth{background: url(../img/book-09.png) no-repeat;}
-        &_tenth{background: url(../img/book-10.png) no-repeat;}
+        border-radius: 5px;
+        width: 200px;
+        height: 275px;
       }
 
       &-name{
@@ -373,6 +451,7 @@ body{
   background: #181e2c;
 
   &__btn{
+    border:0;
     height: 38px;
     width: 51px;
     background: #1f2637;
@@ -387,6 +466,7 @@ body{
       background: #15a4fa;
       color: white;
       cursor: pointer;
+      outline: none;
     }
   }
 }
